--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.11",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.3.4",
     "graphql": "^16.6.0",
     "nodemailer": "^6.9.1",
